# synth-setter

./: .actrc  .env.cloud.example  .env.example  .gitignore  .gitlint  .gitmodules  .plumbignore  .pre-commit-config.yaml  .pydoclint-baseline.txt  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  codecov.yml  environment.yaml  mkdocs.yml  opencode.json  plumb_spec.md  pyproject.toml  pyrightconfig.json  renderscript.sh  requirements-app.txt  requirements-torch.txt  requirements.txt  setup.py
.agents/plugins/: marketplace.json
.claude/: hooks  settings.json
.claude/agents/: lint-cleanup.md  pr-review-orchestrator.md  pr-review-worker-deep.md  pr-review-worker-fast.md
.claude/commands/: lint-cleanup.md  qrspi-design.md  qrspi-implement.md  qrspi-plan.md  qrspi-pr.md  qrspi-questions.md  qrspi-research.md  qrspi-structure.md  qrspi-worktree.md
.claude/hooks/: _lib.sh  doc-drift.sh  pr-review-resolver.sh  pre-pr-review-gate.sh  test.sh  verify-gh-taxonomy.sh
.claude/skills/: eval-schema.yaml
.codex/: config.toml
.codex/agents/: pr-review-orchestrator.toml  pr-review-worker-deep.toml  pr-review-worker-fast.toml
.devcontainer/: Dockerfile  devcontainer.json  initialize.sh  post-create.sh  tmux.conf  zellij.kdl
.devcontainer/baked-source/: devcontainer.json
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.devcontainer/local-mount/: devcontainer.json
.devcontainer/root_gpu/: devcontainer.json
.gemini/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codecov.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  epic.yml  feature.yml  phase.yml  step.yml  task.yml
.github/agents/: lint-cleanup.md
.github/triage/: README.md  triage-prompt.md
.github/workflows/: _compute_test_dataset_spec_uris.py  auto-approve.yml  bats-tests.yml  cadence-investigation-489.yml  check-auth.yml  ci-triage.yaml  claude-code-review.yml  claude-repo-review-full.yml  claude-review.yml  claude.yml  code-quality-main.yaml  code-quality-main.yml  code-quality-pr.yaml  code-quality-pr.yml  cpu-slow.yml  create-project-issues.yml  data-pipeline.yml  dataset-generation.yml  deflake-mps.yml  docker-build-validation.yml  docs.yml  entrypoint-tests.yml  eval.yml  finalize-dataset.yaml  finalize-dataset.yml  flush-investigation.yml  generate-and-finalize-dataset.yaml  generate-dataset-shards.yaml  generate-dataset-shards.yml  generate-finalize-oracle-eval.yaml  job-queue-validate.yaml  job-queue-validate.yml  job-queue.yaml  job-queue.yml  mutmut.yaml  mutmut.yml  nightly-parallel-datagen.yml  nightly-vst-sweep.yml  nightly.yml  oci-image-bake.yaml  (+41 more)
.opencode/agents/: pr-review-worker-deep.toml  (+1 more)
.pi/: APPEND_SYSTEM.md  settings.json  subagents.json
.plumb/: code_coverage_map.json  config.json  coverage.json  requirements.json
configs/: dataset.yaml  eval.yaml  skypilot_launch.yaml  train.yaml
docs/: architecture.md  doc-map.yaml  getting-started.md  glossary.md  index.md  org-migration-checklist.md  pipeline.md  plumb_spec.md  pr-readiness-loop.md
notebooks/: add_embeddings_smoke.ipynb  add_mp3_audio.ipynb  add_preview_columns.ipynb  flush-investigation.ipynb  inpsect-models.ipynb
pipeline/: __init__.py  config.py  constants.py  partitioning.py  prefix.py  r2_io.py  stats.py
presets/: obxf-base.vstpreset
scripts/: README.md  add_music2latent.py  aggregate_samples.sh  capture-skypilot-state.sh  check_no_new_funcs_in_pydoclint_excluded.py  compute_audio_metrics.py  docker_dispatch.sh  docker_entrypoint.py  docker_entrypoint.sh  ensure_plugin_symlinks.sh  ensure_worker_python.sh  entrypoint_generate_dataset.py  entrypoint_generate_shards.py  eval_skills.py  finalize_shards.py  generate_shards.py  generate_surge_xt_data.py  get-ckpt-from-wandb.sh  get_dataset_stats.py  image_config.py  job_queue.py  make_oracle_predictions.py  make_sig_perf.py  materialize_and_upload_spec.py  model_from_wandb_repl.py  paramspec_to_table.py  plot_param2tok.py  predict_vst_audio.py  pueue_queue.py  r2_shard_report.py  replay_h5_to_audio_pairs.py  reshard_data_dynamic_shard.py  rewrite_dataset_to_latest.py  run-linux-vst-headless-bare.sh  run-linux-vst-headless-no-dbus.sh  run-linux-vst-headless-no-exec.sh  run-linux-vst-headless-no-pkill.sh  run-linux-vst-headless-no-stdin-detach.sh  run-linux-vst-headless-no-wait.sh  run-linux-vst-headless.sh  (+17 more)
src/: __init__.py  eval.py  generate_dataset.py  metrics.py  train.py
sweeps/: ds_size.yaml  eval_render.yaml  fm.yaml  generate_dataset_cadence.yaml  generate_dataset_cadence_surge_simple.yaml  generate_dataset_cadence_surge_xt.yaml  generate_dataset_copy_paired_gui_surge_xt.yaml  generate_dataset_copy_paired_reload_surge_xt.yaml  generate_dataset_copy_paired_repro_surge_xt.yaml  generate_dataset_reuse_depth_surge_xt.yaml  generate_dataset_shuffle_probe_surge_xt.yaml  kosc.yaml  ksin.yaml  loader_throughput_fragment.yaml  loader_throughput_mapstyle.yaml
tart/: build.sh  macos.pkr.hcl
tests/: _baseline_worktree.py  _pydoclint_adversarial_lab.py  _vst.py  conftest.py  test__conftest_budget.py  test__conftest_cpu.py  test__conftest_mem.py  test_benchmarks.py  test_best_swap_param_mse.py  test_browse_dataset.py  test_callbacks.py  test_checkpoint_uploader.py  test_compare_baseline_configs.py  test_conditioning.py  test_configs.py  test_datamodules.py  test_docker_entrypoint.py  test_docs_build.py  test_entrypoint.bats  test_eval.py  test_eval_artifact.py  test_eval_artifact_e2e.py  test_eval_consumed_artifacts.py  test_eval_metrics.py  test_eval_output_dir.py  test_eval_partial_wandb.py  test_eval_postprocessing.py  test_eval_provenance.py  test_eval_upload.py  test_finalize_dataset.py  test_finalize_shards.py  test_generate_dataset.py  test_generate_dataset_cli_overrides.py  test_generate_dataset_shards.py  test_generate_dataset_wandb.py  test_generate_shards.py  test_hydra_config_compare.py  test_instantiators.py  test_lance_partial_root_e2e.py  test_loader_throughput_sweep.py  (+31 more)
(+1134 files in other folders)
