[project]
name = "synth-setter"
version = "8.5.1"
description = "Studying the effect of permutation symmetry on audio synthesiser parameter inference."
authors = [{name = "Khaled Tinubu"}, {name = "tinaudio"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # --------- hydra --------- #
  "hydra-colorlog==1.2.0",
  "hydra-core==1.3.2",
  "hydra-optuna-sweeper==1.2.0",
  # --------- loggers --------- #
  "tensorboard",
  "wandb",
  # --------- pipeline --------- #
  "click<8.2",
  # Pin: kubernetes>=36 breaks SkyPilot pod_config validation — see #1239.
  # Co-pin echoed in .github/workflows/test-skypilot-local.yml and
  # .github/workflows/generate-dataset-shards.yaml.
  "kubernetes==35.0.0",
  "numpy",
  "oci",
  "pydantic>=2",
  "pydantic-settings>=2",
  "pyyaml",
  "tomli; python_version < '3.11'",
  # Pin must stay in sync with the bare-runner install in
  # .github/workflows/test-skypilot-debug.yml.
  "skypilot[runpod,oci]==0.12.0",
  "structlog",
  "tenacity",
  "webdataset",
  # --------- runtime --------- #
  "dask[distributed]",
  "einops",
  "h5py",
  "hdf5plugin",
  "librosa",
  "loguru==0.7.3",
  "matplotlib",
  "mido",
  "pandas",
  "pedalboard",
  "POT",
  "pyloudnorm",
  "python-dotenv",
  "rich",
  "rootutils",
  "runpod==1.8.1",
  "scipy==1.14.1",
  "sh",
  "threadpoolctl",
  # --------- eval metrics --------- #
  "pesto-pitch==2.0.1",
  "dtw-python==1.7.4",
  "kymatio==0.3.0",
]

[project.optional-dependencies]
torch = [
  # Install with an explicit index (via uv's --torch-backend) when targeting
  # CUDA wheels in Docker.
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "torchaudio>=2.0.0",
  "lightning>=2.6.0",
  "torchmetrics>=0.11.4",
]
dev = [
  "hypothesis",
  "mutmut==3.5.*",
  "pre-commit",
  "pyright==1.1.408",
  "pytest",
  "pytest-benchmark",
  "pytest-cov",
  "pytest-xdist",
  "ruff",
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "griffe-pydantic",
]
all = [
  "synth-setter[torch,dev]",
]


[project.scripts]
synth-setter-train = "synth_setter.cli.train:main"
synth-setter-eval = "synth_setter.cli.eval:main"
synth-setter-generate-dataset = "synth_setter.cli.generate_dataset:main"
synth-setter-generate-dataset-from-hydra = "synth_setter.cli.generate_dataset:from_hydra"
synth-setter-finalize-dataset = "synth_setter.cli.finalize_dataset:main"
synth-setter-spec-uri = "synth_setter.pipeline.ci.spec_uri:main"




























[tool.setuptools.packages.find]
# PEP src-layout: the only Python package this project ships is `synth_setter`,
# living at src/synth_setter/. Setuptools discovers subpackages automatically.
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"


[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
  "gpu: tests requiring a GPU",
  "mps: tests requiring Apple MPS (Metal)",
  "hypothesis: property-based tests (hypothesis)",
  "pipeline: pipeline integration tests",
  "benchmark: performance benchmarks",
  "requires_vst: requires a VST plugin binary (Surge XT) — skipped unless plugin is present",
  "r2: tests requiring R2/rclone access",
  "integration_r2: end-to-end launcher→R2 integration tests (auto-skipped without R2 creds; run in their own GHA workflow)",
  "docker_smoke: smoke tests that run inside the built Docker image",
  "network: tests that may make outbound network calls (e.g. `git fetch`)",
  "infra: tests that assert invariants of the devcontainer + GitHub Actions configuration",
]
minversion = "6.0"
pythonpath = ["src"]
testpaths = "tests/"


[tool.ruff]
target-version = "py310"
line-length = 99
exclude = ["logs", "data"]
# Legacy files excluded until per-file lint cleanup is done (see issue #25).
extend-exclude = []

[tool.ruff.lint]
# E=pycodestyle errors, F=pyflakes, I=isort, S=bandit security,
# T=T10 (print) + T20 (debugger), UP=pyupgrade, W=pycodestyle warnings,
# ANN001=missing-type-function-argument,
# D100/D101/D102/D103/D107=pydocstyle missing-docstring-on-{module,class,
# method,function,__init__} — together close pydoclint's "no docstring →
# skip checks" P1 blind spot (see #938). D205 enforces blank-line between
# summary and description (the shape sphinx and pydoclint's own parser
# assume). D401 nudges summaries toward imperative mood ("Return …", not
# "Returns …").
select = ["E", "F", "I", "S", "T", "UP", "W", "ANN001",
          "D100", "D101", "D102", "D103", "D107", "D205", "D401"]
# E501: line length handled by ruff-format, S101: allow assert in tests
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"notebooks/**" = ["E702", "E722", "F841", "T201", "ANN001", "D102", "D103", "D107"]
"src/synth_setter/pipeline/data/add_music2latent.py" = ["S605", "D102", "D103", "D107"]
"src/synth_setter/evaluation/compute_audio_metrics.py" = ["T201", "ANN001", "D102", "D103", "D107"]
"src/synth_setter/pipeline/data/stats.py" = ["E402", "T201", "ANN001"]
"src/synth_setter/tools/sig_perf.py" = ["E402", "T201", "D102", "D103", "D107"]
"src/synth_setter/tools/model_from_wandb.py" = ["E402", "D102", "D103", "D107"]
"src/synth_setter/tools/paramspec_to_table.py" = ["E402", "T201", "D102", "D103", "D107"]
"src/synth_setter/tools/plot_param2tok.py" = ["E402", "E741", "F841", "T201", "D102", "D103", "D107"]
"src/synth_setter/evaluation/predict_vst_audio.py" = ["E402", "F841", "D102", "D103", "D107"]
# S603/S607: rclone subprocess calls use CLI args (user-controlled, not untrusted input).
# T201: click.echo used for CLI output.
"src/synth_setter/pipeline/data/r2_report.py" = ["S603", "S607", "T201", "D102", "D103", "D107"]
"src/synth_setter/pipeline/data/reshard.py" = ["T201"]
"src/synth_setter/pipeline/data/rewrite_to_latest.py" = ["ANN001", "D102", "D103", "D107"]
"src/synth_setter/tools/surge_xt_interactive.py" = ["D102", "D103", "D107"]
"src/synth_setter/data/audio_datamodule.py" = ["D102", "D103", "D107"]
"src/synth_setter/data/fm_datamodule.py" = ["D102", "D103", "D107"]
"src/synth_setter/data/kosc_datamodule.py" = ["D102", "D103", "D107"]
"src/synth_setter/data/ksin_datamodule.py" = ["D102", "D103", "D107"]
"src/synth_setter/data/surge_datamodule.py" = ["D102", "D103", "D107"]
"src/synth_setter/data/vst/core.py" = ["D102", "D103", "D107"]
"src/synth_setter/data/vst/generate_vst_dataset.py" = ["D102", "D103", "D107"]
"src/synth_setter/data/vst/param_spec.py" = ["D102", "D103", "D107"]
"src/synth_setter/metrics.py" = ["D102", "D103", "D107"]
# S603/S607: rclone subprocess calls in R2 integration test fixtures.
"tests/pipeline/data/test_r2_report.py" = ["S603", "S607"]
# ANN001: pytest fixture-injected args left un-annotated on legacy callsites.
"tests/tools/test_surge_xt_interactive.py" = ["ANN001"]
"tests/pipeline/test_ci/test_load_image_config.py" = ["D102", "D103", "D107"]
"tests/pipeline/test_schemas/test_dataset_spec.py" = ["ANN001", "D102", "D103", "D107"]
"tests/pipeline/test_schemas/test_prefix.py" = ["ANN001", "D102", "D103", "D107"]
"tests/test_benchmarks.py" = ["ANN001", "D102", "D103", "D107"]
"tests/test_compare_baseline_configs.py" = ["D102", "D103", "D107"]
"tests/test_configs.py" = ["ANN001", "D102", "D103", "D107"]
"tests/test_logging_utils.py" = ["D102", "D103", "D107"]
"src/synth_setter/cli/eval.py" = ["E402", "F841", "D102", "D103", "D107"]
# ANN001: directory-wide ignore for legacy untyped function args under synth_setter/models/.
# New code under synth_setter/models/ should still annotate; remove this entry once legacy
# callsites are cleaned up.
"src/synth_setter/models/**" = ["ANN001"]
"src/synth_setter/models/components/loss.py" = ["D102", "D103", "D107"]
"src/synth_setter/models/components/cnn.py" = ["D102", "D103", "D107"]
"src/synth_setter/models/components/embed_pool.py" = ["D102", "D103", "D107"]
"src/synth_setter/models/components/residual_mlp.py" = ["D102", "D103", "D107"]
"src/synth_setter/models/components/sinkhorn.py" = ["D102", "D103", "D107"]
"src/synth_setter/models/components/transformer.py" = ["F841", "D102", "D103", "D107"]
"src/synth_setter/models/components/vae.py" = ["E402", "T201", "D102", "D103", "D107"]
"src/synth_setter/models/components/vector_field.py" = ["D102", "D103", "D107"]
"src/synth_setter/models/ksin_ff_module.py" = ["F821", "D102", "D103", "D107"]
"src/synth_setter/models/surge_ff_module.py" = ["F821", "D102", "D103", "D107"]
"src/synth_setter/models/ksin_flow_matching_module.py" = ["D102", "D103", "D107"]
"src/synth_setter/models/surge_flow_matching_module.py" = ["D102", "D103", "D107"]
"src/synth_setter/models/surge_flowvae_module.py" = ["D102", "D103", "D107"]
"src/synth_setter/cli/train.py" = ["E402", "D102", "D103", "D107"]
"src/synth_setter/utils/__init__.py" = ["F401"]
"src/synth_setter/utils/callbacks.py" = ["F821", "T201", "ANN001", "D102", "D103", "D107"]
"src/synth_setter/utils/instantiators.py" = ["D102", "D103", "D107"]
"src/synth_setter/utils/rich_utils.py" = ["D102", "D103", "D107"]
"src/synth_setter/utils/utils.py" = ["D102", "D103", "D107"]


[tool.interrogate]
verbose = 2
fail-under = 80
ignore-init-module = true
ignore-init-method = true
ignore-module = true
ignore-nested-functions = true

[tool.docformatter]
wrap-summaries = 99
wrap-descriptions = 99
style = "sphinx"
black = true

# pydoclint: signature ↔ docstring consistency checks. Rule families documented
# at https://jsh9.github.io/pydoclint/violation_codes.html. Sphinx style chosen
# to match existing :param:/:return: docstrings and [tool.docformatter] above.

[tool.pydoclint]
style = "sphinx"
arg-type-hints-in-signature = true
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = true
check-style-mismatch = true
require-return-section-when-returning-nothing = false
skip-checking-raises = false
skip-checking-short-docstrings = false
allow-init-docstring = true
check-class-attributes = true
# Read `# noqa: DOCxxx` from the def line (flake8/ruff convention) rather
# than from the closing-`"""` line. The pydoclint CLI default is
# "docstring"; flipping to "definition" aligns suppressions with the rest
# of this repo's lint stack so contributors don't get a silently inert
# suppression. See the adversarial probe summary on #939 and #938.
native-mode-noqa-location = "definition"
# Legacy violations are pinned in .pydoclint-baseline.txt (one row per
# (file, line, rule code)). New violations — including in files that
# used to be on the path exclude list — fail the hook. Audit baseline
# diffs in PR reviews; cleanup chunks delete rows. See #938.
baseline = ".pydoclint-baseline.txt"
# Disabled so pydoclint won't silently shrink the baseline when a contributor
# fixes a row's underlying violation. Regenerate manually with
# `pydoclint --generate-baseline=1 src/ tests/ scripts/` and commit the diff.
# Otherwise a successful fix produces a "no new violations, count unchanged"
# outcome that's hard to reason about. Tracked under #938.
auto-regenerate-baseline = false
# Path-level exclude regex (verbose). Infra-only after the baseline swap —
# tests/fixtures/ retained because tests/fixtures/baseline_repo and diff_repo
# are mock-repo data shelled out to by the test suite (conceptually adjacent
# to notebooks/: code-but-not-production-code), not legacy violations to
# clean up via the baseline.
exclude = '''(?x)
    (^|/)\.git(/|$)
  | (^|/)\.tox(/|$)
  | (^|/)\.venv(/|$)
  | ^build/
  | ^dist/
  | ^node_modules/
  | ^\.claude/
  | ^\.worktrees/
  | ^notebooks/
  | ^tests/fixtures/
'''

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = ""
commit_message = "chore(release): {version} [skip ci]"
changelog_file = "CHANGELOG.md"

# Major bumps: handled by default via "feat!:" prefix or "BREAKING CHANGE:" footer
# Pre-1.0: breaking changes bump minor (standard semver pre-1.0 behavior)
[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "internal-feat", "internal-fix", "monitoring", "perf", "refactor", "revert", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "revert"]


[tool.coverage.run]
source = ["src/synth_setter", "scripts/ci"]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]
relative_files = true
omit = ["**/__main__.py"]


[tool.coverage.paths]
source = ["src/synth_setter", "*/src/synth_setter"]
scripts = ["scripts/ci", "*/scripts/ci"]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]


[tool.mutmut]
# Phase 4 moved the previously-scripts/-resident Python tools into
# src/synth_setter/{evaluation,tools,pipeline/data}/; scripts/ci/ retains the
# job-queue CLI used by .github/workflows/job-queue*.yaml.
paths_to_mutate = [
    "src/synth_setter/evaluation/",
    "src/synth_setter/tools/",
    "src/synth_setter/pipeline/data/",
    "scripts/ci/",
]
tests_dir = [
    "tests/evaluation/",
    "tests/tools/",
    "tests/pipeline/data/",
    "tests/scripts/ci/",
]
# mutmut copies only `paths_to_mutate` into `mutants/` and strips the real
# `src/` off `sys.path` (see mutmut/__main__.py:setup_source_paths). Without
# `also_copy`, transitive imports from the un-mutated rest of the package
# (e.g. `synth_setter.cli`, `synth_setter.pipeline.r2_io`) fail with
# ImportError during stats collection. Copy the whole package so the sandbox
# can resolve them.
also_copy = ["src/synth_setter/"]
pytest_add_cli_args = ["-m", "not slow and not requires_vst and not r2 and not gpu and not benchmark"]
